--- a/templates/accounting/reports/customer_balances.html
+++ b/templates/accounting/reports/customer_balances.html
@@ -79,7 +79,7 @@
                                     <th>إجمالي الطلبات</th>
                                     <th>المدفوع</th>
                                     <th>الرصيد</th>
-                                    <th>السلف المتاحة</th>
+                                    <th>العربونات المتاحة</th>
                                     <th>الحالة</th>
                                     <th>إجراءات</th>
                                 </tr>
