--- a/templates/accounting/reports/index.html
+++ b/templates/accounting/reports/index.html
@@ -80,7 +80,7 @@
                         <a href="{% url 'accounting:advances_report' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                             <div>
                                 <i class="fas fa-hand-holding-usd me-2 text-info"></i>
-                                تقرير السلف
+                                تقرير العربونات
                             </div>
                             <i class="fas fa-arrow-left"></i>
                         </a>
